# squad-awards

./: .gitignore  Taskfile.yml  cloudbuild.yml  dev.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypoint.sh  gunicorn.conf.py  manage.py  prod.Dockerfile  pyproject.toml
api/: admin.py  models.py  serializers.py  spotify.py  types.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_answer.py  0003_awardchoice_alter_answer_options_and_more.py  0004_awardchoice_image.py  0005_alter_awardchoice_options.py  0006_alter_answer_options_remove_answer_answer_and_more.py
api/models/: __init__.py  answer.py  award_choice.py  base.py  discord_user.py
api/scripts/: load_award_choices.py
api/serializers/: __init__.py  answer.py  award_choice.py  discord_user.py
api/views/: __init__.py  answer.py  auth.py  award_category.py  award_choice.py  health.py  proxy.py  search.py
deploy/dev/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
deploy/dev/proxy/: nginx.conf
deploy/prod/: Dockerfile  cloudbuild.yml  docker-compose.yml  docker-entrypoint.sh
proxy/dev/: nginx.conf
proxy/prod/: nginx.conf
squad_awards/: asgi.py  settings.py  urls.py  wsgi.py
web/app/: package.json  vite.config.ts
web/app/src/: App.tsx  main.tsx
web/app/src/api/: index.ts
web/app/src/components/landing/: index.tsx
web/app/src/components/survey/: SurveySection.tsx  SurveySummary.tsx  index.tsx
web/app/src/types/: index.ts
web/static/web/: index.html  package.json
web/static/web/src/: App.css  App.tsx  index.css
web/static/web/src/api/: index.ts
(+9 files in other folders)
